# NewSD

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Dockerfile  README.md  bunfig.toml  eslint.config.js  go.mod  index.html  main.go  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/workflows/: test.yml
.husky/: pre-commit  pre-push
.playwright-mcp/: page-2026-06-29T16-52-46-655Z.yml
IDEA/: Begin Again.md
_bmad-output/: lovable-prototype-prompt.md  project-context.md
_bmad-output/design-system/: ascii-design-system.md
_bmad-output/implementation-artifacts/: 1a-11-entity-naming-mechanism.md  1a-12-prompt-panel-restructure.md  1a-13-session-autosave-restore.md  1a-3-cr-followup.md  1a-3-grid-snap-stock-source-sink.md  1a-4-cr-report.md  1a-4-flow-connector-port-snap.md  1a-5-spatial-index-viewport-cull.md  1a-6-minimap.md  1a-7-toolbar-statusbar.md  1a-8-property-panel-formula-editor.md  1a-9-i18n.md  2-1-oauth-login-session-dual-channel.md  5-1-cyberpunk-quality-first-8.md  deferred-work.md  sprint-status.yaml
docs/: swimlane-dev-history.md
e2e/: autosave-restore.spec.ts  cloud-render.spec.ts  flow-render.spec.ts  minimap.spec.ts  oauth-login.spec.ts  property-panel.spec.ts  quality-first-8.spec.ts  spatial-index.spec.ts  stock-render.spec.ts  toolbar-statusbar.spec.ts
scripts/: merge-pr.sh  post-merge-cleanup.sh  test-process.sh
src/: routeTree.gen.ts  router.tsx  start.ts  styles.css
wasm/: Cargo.toml
wasm/src/: lib.rs
(+149 files in other folders)
