[package]
name = "newsd-core"
version = "0.1.0"
edition = "2021"
description = "NewSD Wasm numeric core (Float64 system-dynamics simulation). Epic 1b."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
